<resources>
    <string name="app_name">TourMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tours">My Tours</string>
    <string name="weather">Weather</string>
    <string name="location_alert">Location Alert</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@email.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="tour_title">Tour Title</string>
    <string name="destination">Destination</string>
    <string name="your_initial_budget">Your Initial Budget</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
</resources>